--- a/web/package.json
+++ b/web/package.json
@@ -35,5 +35,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-leaflet": "^2.5.2",
+    "@types/react-router-dom": "^5.1.6"
   }
 }
